--- a/server/package.json
+++ b/server/package.json
@@ -5,11 +5,17 @@
   "main": "server.js",
   "dependencies": {
     "@types/express": "^4.17.11",
+    "babel": "^6.23.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "ws": "^7.4.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
+    "@babel/node": "^7.12.10",
+    "@babel/preset-env": "^7.12.11"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
