Allow single user to send messages

--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "@types/express": "^4.17.11",
     "babel": "^6.23.0",
     "express": "^4.17.1",
