--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "babel": "^6.23.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "uuid": "^8.3.2",
     "ws": "^7.4.2"
   },
   "devDependencies": {
