--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -18,6 +18,7 @@ jobs:
               run: |
                   cd server
                   npm install --frozen-lockfile
+                  tsc
             - name: Build Client
               env:
                   NODE_ENV: development
