Github actions changes

--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -17,14 +17,14 @@ jobs:
                   NODE_ENV: development
               run: |
                   cd server
-                  npm install --frozen-lockfile
+                  npm ci
                   tsc
             - name: Build Client
               env:
                   NODE_ENV: development
               run: |
                   cd client
-                  npm install --frozen-lockfile
+                  npm ci
                   npm start
             - name: Deploy on server
               env:
