--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -24,7 +24,7 @@ jobs:
               run: |
                   cd client
                   npm ci
-                  npm publish
+                  npm run build
             - name: Deploy on server
               env:
                   DEPLOYMENT_KEY_B64: ${{ secrets.DEPLOYMENT_KEY_B64 }}
