--- a/client/package.json
+++ b/client/package.json
@@ -18,11 +18,12 @@
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
   },
+  
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build": "webpack --config webpack.dev.js"
   },
   "eslintConfig": {
     "extends": [
