--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -18,9 +18,7 @@ jobs:
               run: |
                   cd client
                   npm ci
-                  npm build
-                  npm test
-                  npm start
+                  npm run build
             - name: Build Server
               env:
                   NODE_ENV: development
